# hft

./: .gitignore  HFT Dictionary.md  README.md  interview-links.md  mutex.md  threads-vs-processes.md
.obsidian/: workspace.json
cpu-concurency/: atomics.md  cahces.md  memory models for atomic.md  threads-vs-processes.md  triviality.md
data oriented paradigm/: data oriented programming.md  simd.md
examples/: CMakeLists.txt
examples/SPSCRingBuffer/: test.cpp
examples/include/: LockFreeStack.h  MPSCQueue.h  SPSCRingBuffer.h
examples/tests/: CMakeLists.txt  test_lfs.cpp  test_mpsc_queue.cpp  test_spsc.cpp
linux-os/: isolated cores.md  malloc new.md  memory mapping.md  numa.md  spaces.md  syscall.md  virtual memory.md
networking/: TCP, UDP, Multicast.md  dpdk.md  http and websocket.md
